--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,14 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Contact - Moderna Bootstrap Template</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Contact &mdash; EssenialSofts Good Software in Less Price </title>
+  <meta content="TeamEssentials" name="author">
+  <meta content="EssenialSofts web development services includes website design and hosting. Secure delivery at affordable prices in Pakistan." name="description">
+  <meta content="EssentialSofts, ESSENTIALSOFTS, Software development, SOFTWARE DEVELOPMENT, Pakistan Softwares, PAKISTAN SOFTWARES, Website, WEBSITES, Web developer, WEB DEVELOPER, digital business, DIGITAL BUSINESS," name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.ico" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/fav.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
@@ -45,7 +46,7 @@
       <div class="logo float-left">
         <!-- <h1 class="text-light"><a href="index.html"><span>EssentialSofts</span></a></h1> -->
         <!-- Uncomment below if you prefer to use an image logo -->
-        <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+        <a href="index.html"><img src="assets/img/logo.png" alt="img" class="img-fluid"></a>
       </div>
 
       <nav class="nav-menu float-right d-none d-lg-block">
