--- a/index.html
+++ b/index.html
@@ -5,13 +5,28 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Moderna Bootstrap Template - Index</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>EssentialSofts &mdash; Good software in less price </title>
+  <meta content="TeamEssentials" name="author">
+  <meta content="EssenialSofts web development services includes website design and hosting. Secure delivery at affordable prices in Pakistan." name="description">
+  <meta content="EssentialSofts, ESSENTIALSOFTS, Software development, SOFTWARE DEVELOPMENT, Pakistan Softwares, PAKISTAN SOFTWARES, Website, WEBSITES, Web developer, WEB DEVELOPER, digital business, DIGITAL BUSINESS," name="keywords">
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://www.essentialsofts.com/",
+    "@type": "IT Company",
+    "name": "EssentialSofts",
+    "author": {
+      "@type": "Person",
+      "name": "TeamEssentials"
+    },
+    "datePublished": "2021-04-15",
+    "description": "EssenialSofts web development services includes website design and hosting. Secure delivery at affordable prices in Pakistan.",
+  }
+  </script>
 
   <!-- Favicons -->
   <link href="assets/img/favicon.ico" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/fav.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
@@ -45,7 +60,7 @@
       <div class="logo float-left">
         <!-- <h1 class="text-light"><a href="index.html"><span>EssentialSofts</span></a></h1> -->
         <!-- Uncomment below if you prefer to use an image logo -->
-        <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+        <a href="index.html"><img src="assets/img/logo.png" alt="img" class="img-fluid"></a>
       </div>
 
       <nav class="nav-menu float-right d-none d-lg-block">
@@ -87,7 +102,7 @@
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Welcome to <span>EssentialSofts</span></h2>
+          <h1 class="animate__animated animate__fadeInDown">Welcome to <span>EssentialSofts</span></h1>
           <p class="animate__animated animate__fadeInUp">Your website is the center of your digital eco-system, like a brick and mortar location, the experience matters once a customer enters, just as much as the perception they have of you before they walk through the door.</p>
           <a href="about.html" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
         </div>
@@ -96,7 +111,7 @@
       <!-- Slide 2 -->
       <div class="carousel-item">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Make Your Dream a Digital Reality</h2>
+          <h1 class="animate__animated animate__fadeInDown">Make Your Dream a Digital Reality</h1>
           <p class="animate__animated animate__fadeInUp">In this modern age everyone is looking for a betterment in there organizaton and having a portfolio website is a main key for promote your bussiness globally. Create digital identity of your business and your team. Get Essential services according to your business setup.</p>
           <a href="services.html" class="btn-get-started animate__animated animate__fadeInUp">Get Services</a>
         </div>
@@ -105,7 +120,7 @@
       <!-- Slide 3 -->
       <div class="carousel-item">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Pakistan's Number #1</h2>
+          <h1 class="animate__animated animate__fadeInDown">Pakistan's Number #1</h1>
           <p class="animate__animated animate__fadeInUp">There is expienced stack developers fro website developing. EssentialSofts also offering job for new internees, who have some expirence in Web developing. There is best in pakistan according to quality measure.</p>
           <a href="contact.html" class="btn-get-started animate__animated animate__fadeInUp">Contact Us</a>
         </div>
@@ -174,7 +189,7 @@
 
         <div class="row">
           <div class="col-lg-6 video-box">
-            <img src="assets/img/why-us.jpg" class="img-fluid" alt="">
+            <img src="assets/img/why-us.jpg" class="img-fluid" alt="img">
             <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
           </div>
 
@@ -209,7 +224,7 @@
 
         <div class="row" data-aos="fade-up">
           <div class="col-md-5">
-            <img src="assets/img/developing.svg" class="feature-img img-fluid" alt="">
+            <img src="assets/img/developing.svg" class="feature-img img-fluid" alt="img">
           </div>
           <div class="col-md-7 pt-4">
             <p class="text-muted">Development</p>
@@ -228,7 +243,7 @@
 
         <div class="row" data-aos="fade-up">
           <div class="col-md-5 order-1 order-md-2">
-            <img src="assets/img/design.svg" class="feature-img img-fluid" alt="">
+            <img src="assets/img/design.svg" class="feature-img img-fluid" alt="img">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1">
             <p class="text-muted">Graphic Designing</p>
@@ -283,7 +298,7 @@
 
         <div class="row" data-aos="fade-up">
           <div class="col-md-5">
-            <img src="assets/img/server.svg" class="feature-img img-fluid" alt="">
+            <img src="assets/img/server.svg" class="feature-img img-fluid" alt="img">
           </div>
           <div class="col-md-7 pt-5">
             <p class="text-muted">Cloud and DevOps</p>
@@ -300,7 +315,7 @@
 
         <div class="row" data-aos="fade-up">
           <div class="col-md-5 order-1 order-md-2">
-            <img src="assets/img/scraping.svg" class="feature-img img-fluid" alt="">
+            <img src="assets/img/scraping.svg" class="feature-img img-fluid" alt="img">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1">
             <p class="text-muted">Scraping</p>
