--- a/about.html
+++ b/about.html
@@ -5,13 +5,14 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>About - Moderna Bootstrap Template</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>About &mdash; EssenialSofts Good Software in Less Price </title>
+  <meta content="TeamEssentials" name="author">
+  <meta content="EssenialSofts web development services includes website design and hosting. Secure delivery at affordable prices in Pakistan." name="description">
+  <meta content="EssentialSofts, ESSENTIALSOFTS, Software development, SOFTWARE DEVELOPMENT, Pakistan Softwares, PAKISTAN SOFTWARES, Website, WEBSITES, Web developer, WEB DEVELOPER, digital business, DIGITAL BUSINESS," name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.ico" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/fav.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
@@ -45,7 +46,7 @@
       <div class="logo float-left">
         <!-- <h1 class="text-light"><a href="index.html"><span>EssentialSofts</span></a></h1> -->
         <!-- Uncomment below if you prefer to use an image logo -->
-        <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+        <a href="index.html"><img src="assets/img/logo.png" alt="img" class="img-fluid"></a>
       </div>
 
       <nav class="nav-menu float-right d-none d-lg-block">
@@ -103,7 +104,7 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="assets/img/about.jpg" class="img-fluid" alt="img">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <h3>What We Are & How Can We Solve Problems?</h3>
@@ -226,7 +227,7 @@
         <div class="owl-carousel testimonials-carousel">
 
           <div class="testimonial-item">
-            <img src="assets/img/testimonials/clent-3.jpg" class="testimonial-img" alt="">
+            <img src="assets/img/testimonials/clent-3.jpg" class="testimonial-img" alt="img">
             <h3>Outsource .Ltd</h3>
             <h4>Website Developer</h4>
             <p>
@@ -237,7 +238,7 @@
           </div>
 
           <div class="testimonial-item">
-            <img src="assets/img/testimonials/clent-2.jpg" class="testimonial-img" alt="">
+            <img src="assets/img/testimonials/clent-2.jpg" class="testimonial-img" alt="img">
             <h3>Web Sol</h3>
             <h4>AI - Python</h4>
             <p>
@@ -248,7 +249,7 @@
           </div>
 
           <div class="testimonial-item">
-            <img src="assets/img/testimonials/clent-1.jpg" class="testimonial-img" alt="">
+            <img src="assets/img/testimonials/clent-1.jpg" class="testimonial-img" alt="img">
             <h3>Hybrid Tech sol</h3>
             <h4>Graphic Designer</h4>
             <p>
