--- a/index-2.html
+++ b/index-2.html
@@ -5,13 +5,14 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Moderna Bootstrap Template - Index 2 without slider</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title> EssenialSofts &mdash; Good Software in Less Price </title>
+  <meta content="TeamEssentials" name="author">
+  <meta content="EssenialSofts web development services includes website design and hosting. Secure delivery at affordable prices in Pakistan." name="description">
+  <meta content="EssentialSofts, ESSENTIALSOFTS, Software development, SOFTWARE DEVELOPMENT, Pakistan Softwares, PAKISTAN SOFTWARES, Website, WEBSITES, Web developer, WEB DEVELOPER, digital business, DIGITAL BUSINESS," name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.ico" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/fav.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
@@ -45,7 +46,7 @@
       <div class="logo float-left">
         <!-- <h1 class="text-light"><a href="index.html"><span>EssentialSofts</span></a></h1> -->
         <!-- Uncomment below if you prefer to use an image logo -->
-        <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+        <a href="index.html"><img src="assets/img/logo.png" alt="img" class="img-fluid"></a>
       </div>
 
       <nav class="nav-menu float-right d-none d-lg-block">
@@ -85,7 +86,7 @@
     <div class="container position-relative" data-aos="fade-up" data-aos-delay="100">
       <div class="row justify-content-center">
         <div class="col-xl-8">
-          <h2>Welcome to EssentialSofts</h2>
+          <h1>Welcome to EssentialSofts</h1>
           <p>Your website is the center of your digital eco-system, like a brick and mortar location, the experience matters once a customer enters, just as much as the perception they have of you before they walk through the door.</p>
           <a href="about.html" class="btn-get-started ">Read More</a>
         </div>
@@ -143,7 +144,7 @@
 
         <div class="row">
           <div class="col-lg-6 video-box">
-            <img src="assets/img/why-us.jpg" class="img-fluid" alt="">
+            <img src="assets/img/why-us.jpg" class="img-fluid" alt="img">
             <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
           </div>
 
@@ -178,7 +179,7 @@
 
         <div class="row" data-aos="fade-up">
           <div class="col-md-5">
-            <img src="assets/img/developing.svg" class="feature-img img-fluid" alt="">
+            <img src="assets/img/developing.svg" class="feature-img img-fluid" alt="img">
           </div>
           <div class="col-md-7 pt-4">
             <p class="text-muted">Development</p>
@@ -197,7 +198,7 @@
 
         <div class="row" data-aos="fade-up">
           <div class="col-md-5 order-1 order-md-2">
-            <img src="assets/img/design.svg" class="feature-img img-fluid" alt="">
+            <img src="assets/img/design.svg" class="feature-img img-fluid" alt="img">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1">
             <p class="text-muted">Graphic Designing</p>
@@ -252,7 +253,7 @@
 
         <div class="row" data-aos="fade-up">
           <div class="col-md-5">
-            <img src="assets/img/server.svg" class="feature-img img-fluid" alt="">
+            <img src="assets/img/server.svg" class="feature-img img-fluid" alt="img">
           </div>
           <div class="col-md-7 pt-5">
             <p class="text-muted">Cloud and DevOps</p>
@@ -269,7 +270,7 @@
 
         <div class="row" data-aos="fade-up">
           <div class="col-md-5 order-1 order-md-2">
-            <img src="assets/img/scraping.svg" class="feature-img img-fluid" alt="">
+            <img src="assets/img/scraping.svg" class="feature-img img-fluid" alt="img">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1">
             <p class="text-muted">Scraping</p>
