--- a/portfolio.html
+++ b/portfolio.html
@@ -5,13 +5,14 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio - Moderna Bootstrap Template</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Portfolio &mdash; EssenialSofts Good Software in Less Price </title>
+  <meta content="TeamEssentials" name="author">
+  <meta content="EssenialSofts web development services includes website design and hosting. Secure delivery at affordable prices in Pakistan." name="description">
+  <meta content="EssentialSofts, ESSENTIALSOFTS, Software development, SOFTWARE DEVELOPMENT, Pakistan Softwares, PAKISTAN SOFTWARES, Website, WEBSITES, Web developer, WEB DEVELOPER, digital business, DIGITAL BUSINESS," name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.ico" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/fav.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
@@ -45,7 +46,7 @@
       <div class="logo float-left">
         <!-- <h1 class="text-light"><a href="index.html"><span>EssentialSofts</span></a></h1> -->
         <!-- Uncomment below if you prefer to use an image logo -->
-        <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+        <a href="index.html"><img src="assets/img/logo.png" alt="img" class="img-fluid"></a>
       </div>
 
       <nav class="nav-menu float-right d-none d-lg-block">
@@ -117,7 +118,7 @@
 
           <div class="col-lg-4 col-md-6 filter-front">
             <div class="portfolio-item">
-              <img src="assets/img/portfolio/p-1.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/p-1.png" class="img-fluid" alt="img">
               <div class="portfolio-info">
                 <h3><a href="assets/img/portfolio/p-1.png" data-gall="portfolioGallery" class="venobox" title="App 1">Web App 1</a></h3>
                 <div>
@@ -130,7 +131,7 @@
 
           <div class="col-lg-4 col-md-6 filter-design">
             <div class="portfolio-item">
-              <img src="assets/img/portfolio/p-2.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/p-2.png" class="img-fluid" alt="img">
               <div class="portfolio-info">
                 <h3><a href="assets/img/portfolio/p-2.png" data-gall="portfolioGallery" class="venobox" title="Web 3">Web 3</a></h3>
                 <div>
@@ -143,7 +144,7 @@
 
           <div class="col-lg-4 col-md-6 filter-front">
             <div class="portfolio-item">
-              <img src="assets/img/portfolio/p-3.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/p-3.png" class="img-fluid" alt="img">
               <div class="portfolio-info">
                 <h3><a href="assets/img/portfolio/p-3.png" data-gall="portfolioGallery" class="venobox" title="App 2">Web App 2</a></h3>
                 <div>
@@ -156,7 +157,7 @@
 
           <div class="col-lg-4 col-md-6 filter-back">
             <div class="portfolio-item">
-              <img src="assets/img/portfolio/p-4.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/p-4.png" class="img-fluid" alt="img">
               <div class="portfolio-info">
                 <h3><a href="assets/img/portfolio/p-4.png" data-gall="portfolioGallery" class="venobox" title="Card 2">Python 2</a></h3>
                 <div>
@@ -169,7 +170,7 @@
 
           <div class="col-lg-4 col-md-6 filter-design">
             <div class="portfolio-item">
-              <img src="assets/img/portfolio/p-5.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/p-5.png" class="img-fluid" alt="img">
               <div class="portfolio-info">
                 <h3><a href="assets/img/portfolio/p-5.png" data-gall="portfolioGallery" class="venobox" title="Web 2">Web 2</a></h3>
                 <div>
@@ -182,7 +183,7 @@
 
           <div class="col-lg-4 col-md-6 filter-front">
             <div class="portfolio-item">
-              <img src="assets/img/portfolio/p-6.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/p-6.png" class="img-fluid" alt="img">
               <div class="portfolio-info">
                 <h3><a href="assets/img/portfolio/p-6.png" data-gall="portfolioGallery" class="venobox" title="App 3">Web App 3</a></h3>
                 <div>
@@ -195,7 +196,7 @@
 
           <div class="col-lg-4 col-md-6 filter-back">
             <div class="portfolio-item">
-              <img src="assets/img/portfolio/p-7.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/p-7.png" class="img-fluid" alt="img">
               <div class="portfolio-info">
                 <h3><a href="assets/img/portfolio/p-7.png" data-gall="portfolioGallery" class="venobox" title="Card 1">Python 1</a></h3>
                 <div>
@@ -208,7 +209,7 @@
 
           <div class="col-lg-4 col-md-6 filter-back">
             <div class="portfolio-item">
-              <img src="assets/img/portfolio/p-8.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/p-8.png" class="img-fluid" alt="img">
               <div class="portfolio-info">
                 <h3><a href="assets/img/portfolio/p-8.png" data-gall="portfolioGallery" class="venobox" title="Card 3">Python 3</a></h3>
                 <div>
@@ -221,7 +222,7 @@
 
           <div class="col-lg-4 col-md-6 filter-design">
             <div class="portfolio-item">
-              <img src="assets/img/portfolio/p-9.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/p-9.png" class="img-fluid" alt="img">
               <div class="portfolio-info">
                 <h3><a href="assets/img/portfolio/p-9.png" data-gall="portfolioGallery" class="venobox" title="Web 1">Web 1</a></h3>
                 <div>
@@ -234,7 +235,7 @@
 
           <div class="col-lg-4 col-md-6 filter-python">
             <div class="portfolio-item">
-              <img src="assets/img/portfolio/p-10.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/p-10.png" class="img-fluid" alt="img">
               <div class="portfolio-info">
                 <h3><a href="assets/img/portfolio/p-10.png" data-gall="portfolioGallery" class="venobox" title="Web 1">Web 1</a></h3>
                 <div>
@@ -247,7 +248,7 @@
 
           <div class="col-lg-4 col-md-6 filter-python">
             <div class="portfolio-item">
-              <img src="assets/img/portfolio/p-11.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/p-11.png" class="img-fluid" alt="img">
               <div class="portfolio-info">
                 <h3><a href="assets/img/portfolio/p-11.png" data-gall="portfolioGallery" class="venobox" title="Web 1">Web 1</a></h3>
                 <div>
@@ -260,7 +261,7 @@
 
           <div class="col-lg-4 col-md-6 filter-python">
             <div class="portfolio-item">
-              <img src="assets/img/portfolio/p-12.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/p-12.png" class="img-fluid" alt="img">
               <div class="portfolio-info">
                 <h3><a href="assets/img/portfolio/p-12.png" data-gall="portfolioGallery" class="venobox" title="Web 1">Web 1</a></h3>
                 <div>
