--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta content="TeamEssentials" name="author">
   <meta content="EssenialSofts web development services includes website design and hosting. Secure delivery at affordable prices in Pakistan." name="description">
   <meta content="EssentialSofts, ESSENTIALSOFTS, Software development, SOFTWARE DEVELOPMENT, Pakistan Softwares, PAKISTAN SOFTWARES, Website, WEBSITES, Web developer, WEB DEVELOPER, digital business, DIGITAL BUSINESS," name="keywords">
+  <meta name="google-site-verification" content="AC_nMmR4qakqY0wZAdfsdcIrC1n1437Dbtd9eNpLU18" />
 
   <script type="application/ld+json">
   {
