--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         </div>
       </div>
     </section>
-    <section class="bg-light" style="background-image: url('https://cdn.pixabay.com/photo/2015/07/28/22/01/office-865091_960_720.jpg'); background-repeat: no-repeat; background-size: cover; background-attachment: fixed;">
+    <section class="bg-light index-pricing-banner">
       <div class="container">
         <div class="row">
           <div class="col-12">
